Bug 510383 - Screen transformation effect is broken
Summary: Screen transformation effect is broken
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.5.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-10-08 09:26 UTC by David Edmundson
Modified: 2025-10-13 19:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2025-10-08 09:26:13 UTC
It's meant to blend and rotate the current state and the rotated image. The capture of the current state is wrong, it's just giving a blue square filling quarter of the screen.
Comment 1 David Edmundson 2025-10-08 14:24:47 UTC
I think it's because it doesn't have a layer; we need to copy/paste something like ScreenshotLayer
Comment 2 David Edmundson 2025-10-08 16:13:04 UTC
Fixed in work/d_ed/screentransform, just needs a cleanup
Comment 3 Bug Janitor Service 2025-10-09 08:21:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8216
Comment 4 Vlad Zahorodnii 2025-10-13 13:27:30 UTC
Git commit 348b35e092a2bbd99c4a7f17a7daf78961a52264 by Vlad Zahorodnii, on behalf of David Edmundson.
Committed on 13/10/2025 at 11:38.
Pushed by vladz into branch 'master'.

plugins/screentransform: Fix pre-rotation grab

Without a viewport explicitly set nothing seems to be captured.

M  +2    -0    src/plugins/screentransform/screentransform.cpp

https://invent.kde.org/plasma/kwin/-/commit/348b35e092a2bbd99c4a7f17a7daf78961a52264
Comment 5 Vlad Zahorodnii 2025-10-13 19:27:34 UTC
Git commit 59b7a5fcd17401c89be2d2a377a0c54a2e4a763c by Vlad Zahorodnii, on behalf of David Edmundson.
Committed on 13/10/2025 at 18:45.
Pushed by vladz into branch 'Plasma/6.5'.

plugins/screentransform: Fix pre-rotation grab

Without a viewport explicitly set nothing seems to be captured.
(cherry picked from commit 348b35e092a2bbd99c4a7f17a7daf78961a52264)

M  +2    -0    src/plugins/screentransform/screentransform.cpp

https://invent.kde.org/plasma/kwin/-/commit/59b7a5fcd17401c89be2d2a377a0c54a2e4a763c