plugins/screentransform: Fix pre-rotation grab

Without a viewport explicitly set nothing seems to be captured.

BUG: 510383