src/plugins/screentransform/screentransform.cpp
@@ -102,6 +102,8 @@ void ScreenTransformEffect::addScreen(Output *screen)
 
         Scene *scene = effects->scene();
         SceneView delegate(scene, screen, nullptr);
+        delegate.setViewport(screen->geometryF());
+        delegate.setScale(screen->scale());
         scene->prePaint(&delegate);
         scene->paint(renderTarget, screen->geometry());
         scene->postPaint();
